# BPenn26-Solana-Prediction-Market

./: .env.example  .git-blame-ignore-revs  .gitignore  Anchor.toml  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
app/: .env.local  next.config.js  package.json  tailwind.config.ts
app/public/videos/: README.md
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: BetPanel.tsx  CategoryFilter.tsx  EvidenceCard.tsx  EvidenceMiniMarket.tsx  EvidenceThread.tsx  FeedCard.tsx  FeedList.tsx  KarmaDisplay.tsx  MarketHeader.tsx  MarketReviewPanel.tsx  OddsBar.tsx  PositionHistory.tsx  PositionSummary.tsx  ResolveForm.tsx  SubmitEvidenceForm.tsx  WalletButton.tsx  WalletProvider.tsx
docs/: architecture.md
programs/pmarket/: Cargo.toml
programs/pmarket/src/: errors.rs  lib.rs
programs/pmarket/src/instructions/: challenge_evidence.rs  collect_fees.rs  create_market.rs  create_resolution_bundle.rs  initialize.rs  initialize_user_profile.rs  mod.rs  place_bet.rs  resolve_market.rs  settle_evidence_stake.rs  settle_position.rs  slash_bond.rs  stake_evidence.rs  submit_evidence.rs  update_karma.rs
programs/pmarket/src/state/: config.rs  evidence.rs  evidence_stake.rs  market.rs  mod.rs  position.rs  resolution_bundle.rs  user_profile.rs
services/api/: package.json
services/indexer/: package.json
services/llm-judge/: package.json
tests/: seed_devnet.ts
tests/integration/: 01_initialize.ts  02_create_market.ts  03_place_bet.ts  04_resolve_settle.ts  05_edge_cases.ts  06_evidence_flow.ts  07_evidence_markets.ts
(+35 files in other folders)
