[package]
name = "pmarket"
version = "0.1.0"
description = "Social Prediction Market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pmarket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
